src/index.css
@layer tailwind-base, primereact, tailwind-utilities;

@import 'primereact/resources/themes/mira/theme.css' layer(primereact);

@layer tailwind-base {
  @tailwind base;
}

@layer tailwind-utilities {
  @tailwind components;
  @tailwind utilities;
}

html,
body,
#root {
  height: 100%;
  margin: 0;
}

.htmlContent a {
  @apply text-blue-500 underline;
}

input[type='datetime-local']::-webkit-calendar-picker-indicator {
  opacity: 0;
}

input[type='datetime-local']:hover::-webkit-calendar-picker-indicator,
input[type='datetime-local']:focus::-webkit-calendar-picker-indicator {
  opacity: 1;
}

.class-menu-item .react-flow__handle {
  width: 100%;
  height: 100%;
  background: transparent;
  position: static;
  top: 0;
  left: 0;
  padding: 2px 0 2px 2px;
  border-radius: 0.25rem;
  transform: none;
  box-sizing: border-box;
  border: none;
  outline: transparent;
  outline-offset: 2px;
  user-select: none;
}

.class-menu-item .react-flow__handle:hover {
  background: #00416b;
}

.DropdownMenuItem[data-disabled] .class-menu-item .react-flow__handle:hover {
  background: transparent;
}

.react-flow__connectionline {
  z-index: 0;
}

div.targetHandle {
  width: 100%;
  height: 100%;
  top: 50%;
  left: 50%;
  background: blue;
  border-radius: 0.5rem;
  opacity: 0.2;
}

